syntax = "proto3";

package proto;

service GRPC {
	rpc CallGRPC(gRPCReq) returns (gRPCResp) {}
}

message gRPCReq {
	string reqSeq = 1;
	string name = 2;
}

message gRPCResp {
	int32 code = 1;
	string msg = 2;
	string result = 3;
}